--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
 </head>
 
 <body>
-
-
     <style>
         .demo-layout-transparent {
-          background: url('../images/transparent.jpg') center / cover;
+          background: url('images/transparent.jpg') center / cover;
         }
         .demo-layout-transparent .mdl-layout__header,
         .demo-layout-transparent .mdl-layout__drawer-button {
@@ -33,8 +31,6 @@
           color: white;
         }
         </style>
-
-
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
             mdl-layout--fixed-header">
     <div class="mdl-layout__drawer">
