--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
           color: white;
         }
         </style>
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
-            mdl-layout--fixed-header">
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
     <div class="mdl-layout__drawer">
       <span class="mdl-layout-title">Jarvis</span>
       <nav class="mdl-navigation">
