--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
           color: white;
         }
         </style>
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
-    <div class="mdl-layout__drawer">
+  <div class="demo-layout-transparent mdl-layout mdl-js-layout">
+      <header class="mdl-layout__header mdl-layout__header--transparent">
+        <div class="mdl-layout__header-row">
+      <!--Title -->
       <span class="mdl-layout-title">Jarvis</span>
+      <!-- Add spacer, to align navigation to the right -->
+      <div class="mdl-layout-spacer"></div>
+      <!-- Navigation -->
       <nav class="mdl-navigation">
         <ul id="switchboard" class="switchboard-list mdl-list">
         </ul>
