adding more pieces

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation -->
       <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="">Link</a>
+          <a class="mdl-navigation__link" href="">Link</a>
+          <a class="mdl-navigation__link" href="">Link</a>
+          <a class="mdl-navigation__link" href="">Link</a>
+        </nav>
+      </div>
+      <!--Will need another navigation here-->
+      <nav class="mdl-navigation">
         <ul id="switchboard" class="switchboard-list mdl-list">
         </ul>
       </nav>
