added second navigation

--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
           <a class="mdl-navigation__link" href="">Link</a>
         </nav>
       </div>
-      <!--Will need another navigation here-->
+    </header>
+      <!--Second Nav-->
+      <div class="mdl-layout__drawer">
+          <span class="mdl-layout-title">Jarvis</span>
+      <!--Navigation-->
       <nav class="mdl-navigation">
         <ul id="switchboard" class="switchboard-list mdl-list">
         </ul>
