adding more to this thing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <style>
         .demo-layout-transparent {
-          background: url('images/transparent.jpg') center / cover;
+          background: url('images/transparent.png') center / cover;
         }
         .demo-layout-transparent .mdl-layout__header,
         .demo-layout-transparent .mdl-layout__drawer-button {
