--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <style>
         .demo-layout-transparent {
-          background: "images/transparent.png" center / cover;
+          background: "images/transparent.jpg" center / cover;
         }
         .demo-layout-transparent .mdl-layout__header,
         .demo-layout-transparent .mdl-layout__drawer-button {
