--- a/index.html
+++ b/index.html
@@ -44,16 +44,15 @@
             </nav>
           </div>
         </header>
-      <!--Second Nav
+      <!--Second Nav-->
       <div class="mdl-layout__drawer">
           <span class="mdl-layout-title">Jarvis</span>
-      <!-- Navigation
+      <!-- Navigation-->
       <nav class="mdl-navigation">
         <ul id="switchboard" class="switchboard-list mdl-list">
         </ul>
       </nav>
     </div>
-     -->
     <main class="mdl-layout__content">
       <div class="page-content">
         <object type="image/svg+xml" data="images/plan.svg">
