--- a/index.html
+++ b/index.html
@@ -20,17 +20,6 @@
 </head>
 
 <body>
-    <style>
-        .demo-layout-transparent {
-          background: "images/transparent.png" center / cover;
-        }
-        .demo-layout-transparent .mdl-layout__header,
-        .demo-layout-transparent .mdl-layout__drawer-button {
-          /* This background is dark, so we set text to white. Use 87% black instead if
-             your background is light. */
-          color: black;
-        }
-        </style>
   <div class="demo-layout-transparent mdl-layout mdl-js-layout">
       <header class="mdl-layout__header mdl-layout__header--transparent">
           <div class="mdl-layout__header-row">
@@ -44,16 +33,17 @@
             </nav>
           </div>
         </header>
-      <!--Second Nav-->
+      <!--Second Nav
       <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
       <div class="mdl-layout__drawer">
           <span class="mdl-layout-title">Jarvis</span>
-      <!-- Navigation-->
+      <!-- Navigation
       <nav class="mdl-navigation">
         <ul id="switchboard" class="switchboard-list mdl-list">
         </ul>
       </nav>
     </div>
+  -->
     <main class="mdl-layout__content">
       <div class="page-content">
         <object type="image/svg+xml" data="images/plan.svg">
