--- a/index.html
+++ b/index.html
@@ -33,17 +33,16 @@
             </nav>
           </div>
         </header>
-      <!--Second Nav
+      <!--Second Nav-->
       <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
       <div class="mdl-layout__drawer">
           <span class="mdl-layout-title">Jarvis</span>
-      <!--Navigation
+      <!--Navigation-->
       <nav class="mdl-navigation">
         <ul id="switchboard" class="switchboard-list mdl-list">
         </ul>
       </nav>
     </div>
-  -->
     <main class="mdl-layout__content">
       <div class="page-content">
         <object type="image/svg+xml" data="images/plan.svg">
