menu always shows icons

--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
         $('.mdl-layout__drawer-button').click();
         $('.room-view').hide();
         $('.'+id+'-card').show();
+     }
+    function openMenualways(id) {
+        $('.mdl-layout__drawer-button').click();
+        $('.room-view').show();
       }
 
   </script>
