menu always shows icons

--- a/index.html
+++ b/index.html
@@ -91,12 +91,18 @@
         $('.mdl-layout__drawer-button').click();
         $('.room-view').hide();
         $('.'+id+'-card').show();
-     }
+      }
+
+  </script>
+
+  <script>
+  window.onload = function(){
+
     function openMenualways(id) {
         $('.mdl-layout__drawer-button').click();
         $('.room-view').show();
       }
-
+  }
   </script>
 </body>
 
