add click on menu

--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
         $('.'+id+'-card').show();
       }
 
+      function openMenuAlways() {
+        $('.mdl-layout__drawer-button').on('click',function(){
+          $('.room-view').show();
+        });
+      }
+    
+
   </script>
 </body>
 
