taking out always open

--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
         $('.'+id+'-card').show();
       }
     
-        $('.mdl-layout__drawer-button').click(function() {
-          console.log("testing click");
-         $('.room-view').show();
-        });
+//        $('.mdl-layout__drawer-button').click(function() {
+//          console.log("testing click");
+//         $('.room-view').show();
+//        });
 
   </script>
 
