--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
         <div class="mdl-card mdl-cell mdl-cell--12-col">
             <div class="mdl-card__supporting-text">
               <h4>Instructions for Jarvis Home Automation</h4>
-              Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Nostrud in laboris labore nisi amet do dolor eu fugiat consectetur elit cillum esse. Pariatur occaecat nisi laboris tempor laboris eiusmod qui id Lorem esse commodo in. Exercitation aute dolore deserunt culpa consequat elit labore incididunt elit anim.
+              <p>
+                To begin using Jarvis, Please select any room, this will bring up the menu with the room selected.
+              </p>
+              <p>Once the Menu is available, You can switch on/off the Light and Curtains</p>
+              <p>You can also set the desired room temperatue in Farenheight</p>
             </div>
           </div>
 
