cleaning up instructions

--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
         <div class="mdl-card mdl-cell mdl-cell--12-col">
             <div class="mdl-card__supporting-text">
               <h4>Instructions for Jarvis Home Automation</h4>
-              <p>
-                To begin using Jarvis, Please select any room, this will bring up the menu with the room selected.
-              </p>
+              <p>To begin using Jarvis</p>
+              <p>Please select any room, this will bring up the menu with the room selected.</p>
               <p>Once the Menu is available, You can switch on/off the Light and Curtains</p>
               <p>You can also set the desired room temperatue in Farenheight</p>
             </div>
