--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Material Design Lite icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- Material Design Lite style sheet -->
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-blue.min.css" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_purple-pink.min.css" />
   <!-- Custom style sheet -->
   <link rel="stylesheet" href="css/styles.css" media="all">
   <!-- Material Design Lite script -->
@@ -21,7 +21,7 @@
 
 <body>
   <div class="demo-layout-transparent mdl-layout mdl-js-layout">
-      <header class="mdl-layout__header mdl-layout__header--transparent">
+      <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
           <div class="mdl-layout__header-row">
             <!-- Title -->
             <span class="mdl-layout-title">Jarvis</span>
