--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <div class="mdl-card__supporting-text">
               <h4>Instructions for Jarvis Home Automation</h4>
               <p>To begin using Jarvis</p>
-              <p>Please select any room, this will bring up the menu with the room selected.</p>
-              <p>Once the Menu is available, You can toggle ON <i class="material-icons md-24">toggle_on</i> or OFF <i class="material-icons md-24">toggle_off</i>the Light and Curtains</p>
-              <p>You can also set the desired room temperature in Fahrenheit/p>
+              <p>Please click on any room on the Control Plane, this will bring up the menu with the room selected on the Left.</p>
+              <p>Once the Menu is available, You can toggle ON <i class="material-icons md-24">toggle_on</i> or OFF <i class="material-icons md-24">toggle_off</i> the Light and Curtains</p>
+              <p>You can also set the desired room temperature in Fahrenheit</p>
             </div>
           </div>
     <!--End of Instructions-->
