adding screen size

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
      <!-- Add spacer, to align navigation to the right -->
         <div class="mdl-layout-spacer"></div>
      <!--Instructions to use app-->
-        <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--12-col">
+        <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col">
             <div class="mdl-card__supporting-text">
               <h4>Instructions for Jarvis Home Automation</h4>
               <p>To begin using Jarvis:</p>
