--- a/index.html
+++ b/index.html
@@ -108,14 +108,15 @@
         $('.room-view').hide();
         $('.'+id+'-card').show();
       }
-    
-//        $('.mdl-layout__drawer-button').click(function() {
-//          console.log("testing click");
-//         $('.room-view').show();
-//        });
 
   </script>
 
+<script>
+$('.mdl-layout__drawer-button').click(function() {
+  $('.room-view').show();
+});
+
+</script>
 
 </body>
 
