--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
               <p>• Please click on any room on the Control Plane, this will bring up the menu with the room selected on the Left.</p>
               <p>• Once the Menu is available, You can toggle ON <i class="material-icons md-24">toggle_on</i> or OFF <i class="material-icons md-24">toggle_off</i> the Light and Curtains</p>
               <p>• You can also set the desired room temperature in Fahrenheit</p>
+              <p>• If you would like to control multiple rooms just select the Menu on the top left hand corner to view all rooms</p>
             </div>
           </div>
     <!--End of Instructions-->
