--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div class="mdl-card__supporting-text">
               <h4>Instructions for Jarvis Home Automation</h4>
               <p>To begin using Jarvis:</p>
-              <p>• Please click on any room on the Control Plane, this will bring up the menu with the room selected on the Left.</p>
-              <p>• Once the Menu is available, You can toggle ON <i class="material-icons md-24">toggle_on</i> or OFF <i class="material-icons md-24">toggle_off</i> the Light and Curtains</p>
-              <p>• You can also set the desired room temperature in Fahrenheit</p>
+              <p>• Please click on any room on the Control Plane, this will bring up the menu with the room selected on the left.</p>
+              <p>• Once the Menu is available, You can toggle ON <i class="material-icons md-24">toggle_on</i> or OFF <i class="material-icons md-24">toggle_off</i> for the Light and Curtains</p>
+              <p>• You can also set the desired room temperature in Fahrenheit or Celsius</p>
               <p>• If you would like to control multiple rooms just select the Menu on the top left hand corner to view all rooms</p>
             </div>
           </div>
