--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="mdl-card__supporting-text">
               <h4>Instructions for Jarvis Home Automation</h4>
               <p>To begin using Jarvis:</p>
-              <p>• Please click on any room on the Control Plane, this will bring up the menu with the room selected on the left.</p>
+              <p>• Please click on any room on the Control Panel, this will bring up the menu with the room selected on the left.</p>
               <p>• Once the Menu is available, You can toggle ON <i class="material-icons md-24">toggle_on</i> or OFF <i class="material-icons md-24">toggle_off</i> for the Light and Curtains</p>
               <p>• You can also set the desired room temperature in Fahrenheit or Celsius</p>
               <p>• You can control multiple rooms by selecting the Menu Slider on the top left hand corner to view all rooms</p>
