--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
               <p>• Please click on any room on the Control Panel, this will bring up the menu with the room selected on the left.</p>
               <p>• Once the Menu is available, You can toggle ON <i class="material-icons md-24">toggle_on</i> or OFF <i class="material-icons md-24">toggle_off</i> for the Light and Curtains</p>
               <p>• You can also set the desired room temperature in Fahrenheit or Celsius</p>
+              <p>• Once desired actions are completed, you can click anywhere on the page to go back</p>
               <p>• You can control multiple rooms by selecting the Menu Slider on the top left hand corner to view all rooms</p>
             </div>
           </div>
